[gd_scene load_steps=14 format=3 uid="uid://cekqjrqu30re4"]

[ext_resource type="FontFile" uid="uid://bg6y23fu3j0tc" path="res://assets/fonts/PixelOperator8.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://bco46mj27qgfe" path="res://scripts/hud.gd" id="1_oo0fn"]
[ext_resource type="FontFile" uid="uid://1mdo8hv3ob8p" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="3_5ysmq"]
[ext_resource type="AudioStream" uid="uid://ihrf1hcit4xn" path="res://assets/sounds/tap.wav" id="4_6fi6k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ysmq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6fi6k"]
bg_color = Color(0.817521, 0.817521, 0.817521, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uo2fv"]
bg_color = Color(0.377919, 0.377919, 0.377919, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_047uy"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6fi6k"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pdws"]
bg_color = Color(0.817521, 0.817521, 0.817521, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hd3ao"]
bg_color = Color(0.377919, 0.377919, 0.377919, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i1j5"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5ysmq"]
bg_color = Color(0.353196, 0.402757, 0.76496, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_oo0fn")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -125.5
offset_right = 125.5
offset_bottom = 65.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -250.0
offset_right = 372.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 64
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.5
offset_top = 48.0
offset_right = 262.5
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 25

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_constants/h_separation = 4
theme_override_fonts/font = ExtResource("3_5ysmq")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ysmq")
theme_override_styles/hover = SubResource("StyleBoxFlat_6fi6k")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uo2fv")
theme_override_styles/normal = SubResource("StyleBoxFlat_047uy")
text = "Restart"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5ysmq")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = SubResource("StyleBoxEmpty_6fi6k")
theme_override_styles/hover = SubResource("StyleBoxFlat_5pdws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_hd3ao")
theme_override_styles/normal = SubResource("StyleBoxFlat_0i1j5")
text = "Main menu"

[node name="DashCooldown" type="ProgressBar" parent="."]
offset_left = 92.0
offset_top = 11.0
offset_right = 201.0
offset_bottom = 28.0
theme_override_styles/fill = SubResource("StyleBoxFlat_5ysmq")
value = 100.0
rounded = true
show_percentage = false

[node name="DashCooldownLabel" type="Label" parent="."]
offset_left = 12.0
offset_top = 12.0
offset_right = 88.0
offset_bottom = 35.0
theme_override_fonts/font = ExtResource("3_5ysmq")
text = "Dash:"

[node name="sfx_dash_recovered" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_6fi6k")

[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_button_3_pressed"]
